fixes more layout issues

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -6,12 +6,35 @@
 html {
   font-size: 20px;
   font-family: Verdana, Geneva, sans-serif;
+  height: 100%;
+}
+
+html {
+  min-height: 100%;
+  position: relative;
+}
+
+body {
+  height: 100%;
 }
 
 header {
   background-color: black;
   height: 12rem;
   padding-left: 1rem;
+}
+
+header h1 {
+  color: white;
+  margin-top: 2.8rem;
+  margin-bottom: 0rem;
+}
+
+header h3.subhead {
+  color: grey;
+  font-weight: normal;
+  margin-bottom: 5rem;
+  margin-top: 0.8rem;
 }
 
 div.bookcat {
@@ -21,12 +44,14 @@ div.bookcat {
   padding-top: 1rem;
 }
 
-a {
+div.bookcat a {
+  color: red;
+  margin-right: 1rem;
+}
+
+.bookcat a:visited {
   color: red;
 }
-.bookcat a:visited {
-    color: red;
-  }
 
 nav.navigation {
   background-color: grey;
@@ -51,28 +76,20 @@ nav ul li a {
   color: purple;
 }
 
-header h1 {
-  color: white;
-  margin-top: 2.8rem;
-  margin-bottom: 0rem;
+
+/*div.centercontent is articles and aside */
+
+div.centercontent {
+  display: flex;
+  flex-wrap: nowrap;
+  direction: ltr;
+  align-items: baseline;
+  justify-content: space-around;
+  margin-top: 1rem;
+  padding-bottom: -11rem;
 }
 
-header h3.subhead {
-  color: grey;
-  font-weight: normal;
-  margin-bottom: 5rem;
-  margin-top: 0.8rem;
-}
-
-/*div.centercontent is articles and the aside */
- div.centercontent {
- display: flex;
- flex-wrap: nowrap;
- direction: ltr;
- align-items: baseline;
- justify-content: space-around;
- margin-top: 1rem;
- }
+/* section.newscontent is only the news section */
 
 section.newscontent {
   display: flex;
@@ -81,7 +98,7 @@ section.newscontent {
   width: 60%;
   padding: 1rem;
 
- }
+}
 
 section.newscontent h2 {
   font-size: 2rem;
@@ -97,43 +114,54 @@ p.italic {
   font-style: italic;
 }
 
+ /* Aside code */
+
 aside.catspotlight {
   display: flex;
-  border: 0.1rem solid black;
-  margin: 0;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 16%;
+  border: 1px solid black;
+  justify-content: space-around;
+}
+
+aside.catspotlight div {
+  display: flex;
   flex-direction: column;
-  width: 25%
+  align-items: center;
 }
 
-aside div {
-  align-self: center;
+aside.catspotlight div p {
+  align-items: flex-start;
 }
 
-div h2 {
-  font-size: 1.3rem;
+aside.catspotlight div a {
+  color: red;
+  margin-bottom: 1rem;
+}
+
+aside.catspotlight div h2 {
+  font-size: 1.8rem;
+  margin-bottom: 0.6rem;
 }
 
 div h3 {
   font-size: 1.2rem;
-
 }
 
-img.catintube {
-  width: 3rem;
-}
-
-aside div ul li p {
-  width: 50%;
-
+html {
+  position: absolute;
 }
 
 footer {
   background-color: black;
-  position: relative;
-  bottom: 0;
+  position: fixed;
+  bottom: 0rem;
   width: 100%;
-  height: 13rem;
-  margin-top: 1rem;
+  height: 11rem;
+  margin-bottom: 0rem;
+  margin-top: 15rem;
 }
 
 footer div ul.contact {
@@ -146,6 +174,7 @@ ul.contact li{
    display: block;
    padding: 0.1rem;
    margin-left: 0.1rem;
+   font-size: 1rem;
  }
 
 div.email {
@@ -178,32 +207,50 @@ div.cattypes {
   width: 25%;
 }
 
-button {
-  box-shadow: 0px 2px 3px #444;
-  display: inline-block;
+a.button {
+  background-color: lightgrey;
+  padding: 2rem 1rem 1rem 0.5rem;
   border-radius: 10%;
-  padding: 0.2rem;
-}
-
-button a {
   color: black;
+  text-decoration: none;
+  box-shadow: 0px 2px 6px #444;
+  margin-bottom: 2rem;
 }
 
-button:hover {
-  background-color: rgba (45, 91, 107, 0.55)
+a.button:hover {
+  color: red;
 }
 
 /* Code for kittyprofiles page */
-
 div.catprofiles {
   display: flex;
   flex-direction: column;
+  min-height: 100%;
+  padding-bottom: 11rem;
 }
 
-div.nameandphoto {
-  display: inline-block;
+div.catprofiles article {
+  display: flex;
+  flex-direction: row;
 }
 
-div.descriptionandbutton {
-  display: inline-block;
+div.catprofiles article h2 {
+  margin-left: 6rem;
+  font-weight: lighter;
+  color: cornflowerblue;
+  font-style: italic;
+  margin-bottom: 0rem;
+}
+
+div.descriptionandbutton p {
+  width: 60%;
+  margin-top: 6.5rem;
+  font-size: 1.5rem;
+  align-self: baseline;
+
+}
+.catphoto {
+  border: 0.1rem solid #ddd;
+  padding: 0.5rem;
+  margin: 0.5rem 1.5rem 1rem 1rem;
 }
